--- a/html/index.html
+++ b/html/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Weather Vain</title>
+  <title>FoodList</title>
       <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <p class="prompt">Are you looking for a particular restauraunt?</p>
   <form class="pure-form">
     <input id="restaurant-entered" type="text" class="pure-input-rounded">
+    <select>
+    <option>Chelsea</option>
+    <option>Financial District</option>
+    <option>West Village</option>
+    </select>
     <button id="submit_button" type="submit" class="pure-button">Search</button>
   </form>
 
