--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-<!--     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'> -->
+ <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap.css" rel="stylesheet" type="text/css">
+
   </head>
   <body>
     <div class="main-container">
@@ -30,6 +30,8 @@
           <div class="well bs-component">
             <form class="form-horizontal" action="/login" method="post">
               <fieldset>
+              <div class=coverphoto>
+              </div>
                 <legend>Login</legend>
                 <div class="form-group">
                   <label for="inputEmail" class="col-lg-2 control-label">Email</label>
