--- a/html/single_restaurant.html
+++ b/html/single_restaurant.html
@@ -9,6 +9,7 @@
 <input name="address" id="address" value="{{address}}"><br>
 <input name="comments" id="comments" value="Comments"><br>
 <button type="submit">Save</button>
+<a href='/'>go back home</a>
 </form>
 
 
