MVP is finally done and kinda pretty!

--- a/html/signup.html
+++ b/html/signup.html
@@ -27,6 +27,7 @@
                 <div class="form-group">
                   <div class="col-lg-10 col-lg-offset-2">
                     <button type="submit" class="btn btn-primary">Join!</button>
+
                   </div>
                 </div>
               </fieldset>
@@ -35,5 +36,10 @@
         </div>
       </div>
     </div>
+    <footer class="navbar-default navbar-fixed-bottom">
+          <div class="container-fluid">
+          <p>Made by Michelle Brant</p>
+          </div>
+          </footer>
   </body>
 </html>
