--- a/html/index.html
+++ b/html/index.html
@@ -2,23 +2,64 @@
 <html>
   <head>
     <link href="normalize.css" rel="stylesheet" type="text/css">
- <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="bootstrap.css" rel="stylesheet" type="text/css">
+            <link href="bootstraptheme.css" rel="stylesheet" type="text/css">
+     <link href="style.css" rel="stylesheet" type="text/css">
+
 <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+
   </head>
   <body>
+  <nav class="navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">NYC FoodList</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li class="dropdown" >
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
+          <ul class="dropdown-menu" >
+            <li><a href="#">About</a></li>
+            <li><a href="#">Your Lists</a></li>
+            <li><a href="/logout">Logout</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </li>
+      </ul>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
         {{#logged_in}}
         <div class=heading2>
          <h1>New York FoodList </h1>
          </div>
+         <div class="welcome">
           <h2>Welcome {{email}} ! </h2>
-          <div class="option1">
+          </div>
+          <div class="col-md-6">
           <a href="/yourlists/{{id}}">See your lists here!</a>
           </div>
-          <div class="option2">
+          <div class="col-md-6">
           <a href="/new">Search new restaurants here!</a>
           </div>
-          <a href="/logout">Logout!</a>
+          <footer class="navbar-default navbar-fixed-bottom">
+          <div class="container-fluid">
+          <p>Made by Michelle Brant</p>
+          </div>
+          </footer>
 
         {{/logged_in}}
         {{^logged_in}}
@@ -47,7 +88,6 @@
                   <div class="col-lg-10 col-lg-offset-2">
                     <button type="submit" class="btn btn-primary">Login</button>
                   </div>
-                </div>
               </fieldset>
             </form>
           </div>
@@ -56,4 +96,6 @@
         {{/logged_in}}
 
   </body>
+<script src="jquery.js"></script>
+<script src="bootstrap.min.js"></script>
 </html>
