--- a/html/single_restaurant.html
+++ b/html/single_restaurant.html
@@ -1,7 +1,50 @@
-{{address}}
-{{location}}
-{{restaurant_name}}
+<!DOCTYPE html>
+<html>
+<head>
+    <link href="normalize.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap.css" rel="stylesheet" type="text/css">
+      <link href="bootstraptheme.css" rel="stylesheet" type="text/css">
+     <link href="style.css" rel="stylesheet" type="text/css">
 
+<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+  <title></title>
+</head>
+<body>
+<nav class="navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">NYC FoodList</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li class="dropdown" >
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
+          <ul class="dropdown-menu" >
+            <li><a href="#">About</a></li>
+            <li><a href="#">Your Lists</a></li>
+            <li><a href="/logout">Logout</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </li>
+      </ul>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+ <div class=heading4>
+         <h1>Find new restaurants here!</h1>
+         </div>
 <form method="POST" action="/confirmation">
 <input name= "list_name" id="list_name" value="List Name"><br>
 <input name="area" id="area" value="{{area}}"><br>
@@ -9,7 +52,21 @@
 <input name="address" id="address" value="{{address}}"><br>
 <input name="comments" id="comments" value="Comments"><br>
 <button type="submit">Save</button>
-<a href='/'>go back home</a>
-</form>
+<script src="jquery.js"></script>
+<script src="bootstrap.min.js"></script>
+<footer class="navbar-default navbar-fixed-bottom">
+          <div class="container-fluid">
+          <p>Made by Michelle Brant</p>
+          </div>
+          </footer>
+</body>
+</html>
+
+
+
+
+
+
+
 
 
