--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Confirmation</title>
+      <link href="normalize.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap.css" rel="stylesheet" type="text/css">
+      <link href="bootstraptheme.css" rel="stylesheet" type="text/css">
+     <link href="style.css" rel="stylesheet" type="text/css">
+
+<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
-<body>
-<a href='/'>go back home</a>
+<body class='confirmation'>
+<nav class="navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">NYC FoodList</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li class="dropdown" >
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
+          <ul class="dropdown-menu" >
+            <li><a href="/about">About</a></li>
+            <li><a href="/logout">Logout</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/contact">Contact</a></li>
+          </ul>
+        </li>
+      </ul>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+<div class=confirmation2>
+<h2>You've successfully added this to your list!</h2>
+<a href='/'>Go back home!</a>
+</div>
+<footer class="navbar-default navbar-fixed-bottom">
+          <div class="container-fluid">
+          <p>Made by Michelle Brant</p>
+          </div>
+          </footer>
 </body>
+<script src="jquery.js"></script>
+<script src="bootstrap.min.js"></script>
+
 </html>
