--- a/html/new.html
+++ b/html/new.html
@@ -6,7 +6,7 @@
     <link href="bootstraptheme.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
   <meta charset="UTF-8">
-  <title>FoodList</title>
+  <title>NYC FoodList</title>
 </head>
 <body>
 
@@ -30,11 +30,10 @@
         <li class="dropdown" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
           <ul class="dropdown-menu" >
-            <li><a href="#">About</a></li>
-            <li><a href="#">Your Lists</a></li>
+         <li><a href="/about">About</a></li>
             <li><a href="/logout">Logout</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </li>
       </ul>
@@ -45,8 +44,12 @@
  <div class=heading3>
          <h1>Find new restaurants here!</h1>
          </div>
-
-  <form class="pure-form">
+<div class="search">
+<h2>Search below. Click to add to a list</h2>
+</div>
+<div class="newform">
+<div class="row>"
+  <form class="pure-form center-block">
     <input id="restaurant-entered" type="text" value="Enter keyword here!" class="pure-input-rounded">
     <select>
       <option>Astoria</option>
@@ -82,6 +85,7 @@
       <option>Meatpacking District</option>
       <option>Midtown East</option>
       <option>Midtown West</option>
+      <option>New York</option>
       <option>Noho</option>
       <option>Nolita</option>
       <option>Nomad</option>
@@ -99,8 +103,10 @@
       <option>Williamsburg</option>
     </select>
     <button id="submit_button" type="submit" class="pure-button">Search</button>
+    <button id="clear" type="submit" class="pure-button">Clear results</button>
   </form>
-
+</div>
+</div>
   <p id="info"></p>
   <footer class="navbar-default navbar-fixed-bottom">
           <div class="container-fluid">
