--- a/html/signup.html
+++ b/html/signup.html
@@ -1,15 +1,49 @@
 <!doctype html>
 <html>
   <head>
+    <link href="normalize.css" rel="stylesheet" type="text/css">
+        <link href="bootstrap.css" rel="stylesheet" type="text/css">
+            <link href="bootstraptheme.css" rel="stylesheet" type="text/css">
+     <link href="style.css" rel="stylesheet" type="text/css">
+
+<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
   </head>
-  <body>
-    <div class="main-container">
-      <div class="border-container">
-        <h1>Super Secure Signup Page</h1>
-        <div class="col-lg-6 center-block">
-          <div class="well bs-component">
-            <form class="form-horizontal" action="/signup" method="post">
+  <title>Sign Up</title>
+  <body class='signupbody'>
+  <nav class="navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">NYC FoodList</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li class="dropdown" >
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
+          <ul class="dropdown-menu" >
+              <li><a href="/about">About</a></li>
+            <li><a href="/logout">Logout</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/contact">Contact</a></li>
+          </ul>
+        </li>
+      </ul>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+            <form class="form-horizontal signup center-block " action="/signup" method="post">
               <fieldset>
                 <legend>Sign Up</legend>
                 <div class="form-group">
@@ -32,14 +66,18 @@
                 </div>
               </fieldset>
             </form>
+
+
           </div>
-        </div>
-      </div>
-    </div>
-    <footer class="navbar-default navbar-fixed-bottom">
+
+ <footer class="navbar-default navbar-fixed-bottom">
           <div class="container-fluid">
           <p>Made by Michelle Brant</p>
-          </div>
+
           </footer>
   </body>
+<script src="jquery.js"></script>
+<script src="bootstrap.min.js"></script>
 </html>
+
+
