--- a/html/singlelist.html
+++ b/html/singlelist.html
@@ -7,7 +7,7 @@
      <link href="style.css" rel="stylesheet" type="text/css">
 
 <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-  <title></title>
+  <title>NYC FoodList</title>
 </head>
 <body>
 <nav class="navbar-default">
@@ -30,11 +30,10 @@
         <li class="dropdown" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
           <ul class="dropdown-menu" >
-            <li><a href="#">About</a></li>
-            <li><a href="#">Your Lists</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/logout">Logout</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </li>
       </ul>
@@ -42,16 +41,43 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
- <div class=heading6>
-         <h1>Find new restaurants here!</h1>
+ <div class=heading7>
+
+         <h1>{{name}}</h1>
          </div>
-<form method="POST" action="/confirmation">
-<input name= "list_name" id="list_name" value="List Name"><br>
-<input name="area" id="area" value="{{area}}"><br>
-<input name= "restaurant_name" id="restaurant_name" value="{{restaurant_name}}"><br>
-<input name="address" id="address" value="{{address}}"><br>
-<input name="comments" id="comments" value="Comments"><br>
-<button type="submit">Save</button>
+<div class="row">
+<div class="col-md-3">
+<h4>Name</h4>
+</div>
+<div class="col-md-3">
+<h4>Location</h4>
+</div>
+<div class="col-md-3">
+<h4>Address</h4>
+</div>
+<div class="col-md-3">
+<h4>Comments</h4>
+</div>
+</div>
+{{#data}}
+<div class="row">
+<div class="col-md-3">
+{{restaurant_name}}
+</div>
+<div class="col-md-3">
+{{location}}
+</div>
+<div class="col-md-3">
+{{address}}
+</div>
+<div class="col-md-3">
+{{comments}}
+</div>
+</div>
+<br>
+<br>
+{{/data}}
+<div class="space"></div>
 <footer class="navbar-default navbar-fixed-bottom">
           <div class="container-fluid">
           <p>Made by Michelle Brant</p>
