--- a/html/deleted.html
+++ b/html/deleted.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
+  <head>
     <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="bootstrap.css" rel="stylesheet" type="text/css">
-      <link href="bootstraptheme.css" rel="stylesheet" type="text/css">
+        <link href="bootstrap.css" rel="stylesheet" type="text/css">
+            <link href="bootstraptheme.css" rel="stylesheet" type="text/css">
      <link href="style.css" rel="stylesheet" type="text/css">
 
 <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-  <title>NYC FoodList</title>
-</head>
-<body>
-<nav class="navbar-default">
+
+  </head>
+  <title>User Created!</title>
+  <body class='signupbody'>
+  <nav class="navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -30,7 +31,7 @@
         <li class="dropdown" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
           <ul class="dropdown-menu" >
-            <li><a href="/about">About</a></li>
+              <li><a href="/about">About</a></li>
             <li><a href="/logout">Logout</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="/contact">Contact</a></li>
@@ -41,60 +42,20 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
- <div class=heading7>
+<div class="center-block signupform">
+   <h1>Item deleted!</h1>
+   <br>
+   <a class="youdidit" href="/">Return home</a>
+   </div>
 
-         <h1>{{name}}</h1>
-         </div>
-<div class="row">
-<div class="col-md-2">
-<h4>Name</h4>
-</div>
-<div class="col-md-3">
-<h4>Location</h4>
-</div>
-<div class="col-md-3">
-<h4>Address</h4>
-</div>
-<div class="col-md-3">
-<h4>Comments</h4>
-</div>
-</div>
-{{#data}}
-<div class="row">
-<div class="col-md-2">
-{{restaurant_name}}
-</div>
-<div class="col-md-3">
-{{location}}
-</div>
-<div class="col-md-3">
-{{address}}
-</div>
-<div class="col-md-3">
-{{comments}}
-</div>
-<form class= "col-md-1" method="POST" action="/place/{{id}}?_method=DELETE">
-  <button>Remove</button>
-</form>
-</div>
-<br>
-<br>
-{{/data}}
-<div class="space"></div>
-<footer class="navbar-default navbar-fixed-bottom">
+ <footer class="navbar-default navbar-fixed-bottom">
           <div class="container-fluid">
           <p>Made by Michelle Brant</p>
-          </div>
+
           </footer>
+  </body>
 <script src="jquery.js"></script>
 <script src="bootstrap.min.js"></script>
-
-</body>
 </html>
-
-
-
-
-
 
 
