--- a/html/index.html
+++ b/html/index.html
@@ -94,7 +94,7 @@
               </fieldset>
             </form>
             <div class="signupform">
-          <p>Not a member? <a href="/signup">Sign Up!</a></p>
+          <p class="notamember">Not a member? <a href="/signup">Sign Up!</a></p>
           </div>
         {{/logged_in}}
 
